--- a/css/chat.css
+++ b/css/chat.css
@@ -1,25 +1,29 @@
 body {
-    background-color: antiquewhite;
-    font-family: "Bona Nova SC", serif;
+background-color: antiquewhite;
+font-family: "Bona Nova SC", serif;
 }
 .navbar {
-    background-color: #e0dccf;
+background-color: #e0dccf;
 }
 
 #chat3 .form-control {
-    border-color: transparent;
-    }
-    
-    #chat3 .form-control:focus {
-    border-color: transparent;
-    box-shadow: inset 0px 0px 0px 1px transparent;
-    }
-    
-    .badge-dot {
-    border-radius: 50%;
-    height: 10px;
-    width: 10px;
-    margin-left: 2.9rem;
-    margin-top: -.75rem;
-    }
+border-color: transparent;
+}
 
+#chat3 .form-control:focus {
+border-color: transparent;
+box-shadow: inset 0px 0px 0px 1px transparent;
+}
+
+.badge-dot {
+border-radius: 50%;
+height: 10px;
+width: 10px;
+margin-left: 2.9rem;
+margin-top: -.75rem;
+}
+
+#selectedBookImage {
+width: 466px;
+height: auto; /* Maintain aspect ratio */
+}
